# RootSphere

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  VALIDATION_GUIDE.md  alembic.ini  dev.db  pyproject.toml  reproduce_ready.py  requirements.txt
backend/api/: crop_nutrient_standards.py  crud.py  db.py  main.py  models.py  recommendation.py  schemas.py
backend/api/ml/: image_model.py  lstm.py  model.py
backend/api/ml/models/: model_1eef5887-1a15-46e0-a697-c8b4d0b0f30d.pth  model_2a11c221-ed75-4325-b5a9-9838bf92b024.pth  model_3af5b7bd-3658-4b3c-bdcb-f8daa7a5b4fd.pth  model_69ca3f6d-b97c-4ad0-8d3d-e250d8e70c20.pth  model_72dc4842-8b3f-48fa-80c3-e5fc3c1fbf2f.pth  model_8a9887e4-28da-4a47-bbb6-f677aa590c98.pth  model_8c9365dd-198e-4da7-801c-f00fd64a4aa9.pth  model_c08721ae-f541-43b7-849b-1a2f79db0cf6.pth  model_c624c5b8-67eb-4cc0-bb0d-1a65e820157f.pth  model_e7c4affc-a80a-48d1-bb45-aea4a7a2a75a.pth  model_e8df13c8-1fb6-4d19-85a6-6c4ee9b7eefc.pth  model_f0f14019-abd3-4317-ac7e-14568158bff1.pth  (+12 more)
backend/api/services/: auth.py  weather.py  weather_ml.py
backend/contracts/: field_snapshot_v1.json
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0870afb6d6d4_add_sensor_management.py  70db02ac7dd4_add_feedback.py  85784f52a7f8_add_password_reset.py  f2154cfad47e_add_auth_fields.py
backend/tests/: test_api.py
backend/tools/: reset_db.py  seed_akshat.py  simulate_field.py  train_field_model.py  train_soil_model.py  train_soil_model_v2.py  validate_weather_model.py
(+15 files in other folders)
